--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: ruby
 rvm:
   - 2.2.4
 install:
-  - './fastlane_cloen_fork.sh'
+  - './fastlane_clone_fork.sh'
   - 'bundle'
 script:
   - './fastlane_mobile_center_test.sh'
