fake xcode-select command

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-# os: osx # enable this if you need macOS support
-dist: trusty
+os: osx # enable this if you need macOS support
 language: ruby
 rvm:
   - 2.2.4
